2009-09-13  Frank Lanitz  <frank@frank(dot)uvena(dot)de>

 * Adding custom templates to wizard.


2009-08-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make reference dialog catch suggestions from all *.aux files inside
   the current directory.


2009-08-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Switch to waf and remove autotools build environment. Still experimental.


2009-07-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Correct a tooltip by removing unneeded \t from it.


2009-07-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a function to level up and level down structure element.


2009-07-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Migrated bibTeX inserting entry framework to make usage of a GPtrArray.


2009-06-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added Portuguese translation. Thanks to André Glória for providing.


2009-05-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Some more clean up of code.
 * Update of documentation for 0.4 release.


2009-05-21  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added configuration dialog.


2009-05-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make toolbar document sensitive.


2009-05-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Adding some more items to toolbar for centerin, left and right formatted
   text. Created LaTeX code based on needs still some improvement. Please
   use with care.


2009-05-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Adding a toolbar for common LaTeX format topics.


2009-04-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Set undo points for better redo/undo on inserting formatings.
 * Make reference type inside insert reference dialog accessible by
   keyboard.


2009-04-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added some new lines into latex beamer template.


2009-04-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
